remote-cluster/yamls/collector-netpol.yaml







apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: collector-no-ingress
  namespace: stackrox
  labels:
    app.kubernetes.io/component: collector
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 3.71.0
    helm.sh/chart: sensor-71.0.0
    auto-upgrade.stackrox.io/component: "sensor"
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  podSelector:
    matchLabels:
      app: collector
  policyTypes:
    - Ingress
